src/grammar.output
Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: UNIT

    2 UNIT: '{' OPERATIONS '}'
    3     | '{' '}'

    4 OPERATIONS: OPERATION
    5           | OPERATIONS OPERATION

    6 OPERATION: PRINT
    7          | READ
    8          | ASSIGN
    9          | IF
   10          | WHILE

   11 ASSIGN: NUMBER_VAR '=' NUMBER_EXPR ';'
   12       | STRING_VAR '=' STRING_EXPR ';'
   13       | STRING_VAR '[' NUMBER_EXPR ']' '=' STRING_EXPR ';'

   14 PRINT: _PRINT '(' NUMBER_EXPR ')' ';'
   15      | _PRINT '(' STRING_EXPR ')' ';'

   16 READ: _READ '(' NUMBER_VAR ')' ';'
   17     | _READ '(' STRING_VAR ')' ';'

   18 IF: _IF '(' BOOL_EXPR ')' UNIT
   19   | _IF '(' BOOL_EXPR ')' UNIT _ELSE UNIT

   20 WHILE: _WHILE '(' BOOL_EXPR ')' UNIT

   21 STRING_VAR: _STRING_VAR

   22 STRING_EXPR: CONCAT_EXPR
   23            | STRING_EXPR '+' CONCAT_EXPR

   24 CONCAT_EXPR: '(' STRING_EXPR ')'
   25            | STRING_TERM
   26            | SLICE_EXPR

   27 SLICE_EXPR: CONCAT_EXPR '[' NUMBER_EXPR ':' NUMBER_EXPR ']'
   28           | CONCAT_EXPR '[' NUMBER_EXPR ']'

   29 STRING_TERM: STRING_VAR
   30            | _STRING

   31 NUMBER_VAR: _NUMBER_VAR

   32 NUMBER_EXPR: NUMBER_EXPR '+' ADD_EXPR
   33            | NUMBER_EXPR '-' ADD_EXPR
   34            | ADD_EXPR

   35 ADD_EXPR: ADD_EXPR '*' MULT_EXPR
   36         | ADD_EXPR '/' MULT_EXPR
   37         | MULT_EXPR

   38 MULT_EXPR: MULT_EXPR '%' MOD_EXPR
   39          | MOD_EXPR

   40 MOD_EXPR: '(' NUMBER_EXPR ')'
   41         | NUMBER_TERM

   42 NUMBER_TERM: NUMBER_VAR
   43            | _NUMBER
   44            | _LEN_FUNC '(' STRING_EXPR ')'

   45 BOOL_EXPR: BOOL_EXPR '|' '|' OR_EXPR
   46          | OR_EXPR

   47 OR_EXPR: OR_EXPR '&' '&' AND_EXPR
   48        | AND_EXPR

   49 AND_EXPR: BOOL_TERM
   50         | '(' BOOL_EXPR ')'
   51         | '!' '(' BOOL_EXPR ')'

   52 BOOL_TERM: NUMBER_EXPR BOOL_FUNCTION NUMBER_EXPR
   53          | STRING_EXPR BOOL_FUNCTION STRING_EXPR

   54 BOOL_FUNCTION: '=' '='
   55              | '!' '='
   56              | '<' '='
   57              | '>' '='
   58              | '<'
   59              | '>'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 51 55
'%' (37) 38
'&' (38) 47
'(' (40) 14 15 16 17 18 19 20 24 40 44 50 51
')' (41) 14 15 16 17 18 19 20 24 40 44 50 51
'*' (42) 35
'+' (43) 23 32
'-' (45) 33
'/' (47) 36
':' (58) 27
';' (59) 11 12 13 14 15 16 17
'<' (60) 56 58
'=' (61) 11 12 13 54 55 56 57
'>' (62) 57 59
'[' (91) 13 27 28
']' (93) 13 27 28
'{' (123) 2 3
'|' (124) 45
'}' (125) 2 3
error (256)
_NUMBER (258) 43
_STRING (259) 30
_NUMBER_VAR (260) 31
_STRING_VAR (261) 21
_PRINT (262) 14 15
_IF (263) 18 19
_ELSE (264) 19
_WHILE (265) 20
_READ (266) 16 17
_LEN_FUNC (267) 44


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
PROGRAM (33)
    on left: 1, on right: 0
UNIT (34)
    on left: 2 3, on right: 1 18 19 20
OPERATIONS (35)
    on left: 4 5, on right: 2 5
OPERATION (36)
    on left: 6 7 8 9 10, on right: 4 5
ASSIGN (37)
    on left: 11 12 13, on right: 8
PRINT (38)
    on left: 14 15, on right: 6
READ (39)
    on left: 16 17, on right: 7
IF (40)
    on left: 18 19, on right: 9
WHILE (41)
    on left: 20, on right: 10
STRING_VAR (42)
    on left: 21, on right: 12 13 17 29
STRING_EXPR (43)
    on left: 22 23, on right: 12 13 15 23 24 44 53
CONCAT_EXPR (44)
    on left: 24 25 26, on right: 22 23 27 28
SLICE_EXPR (45)
    on left: 27 28, on right: 26
STRING_TERM (46)
    on left: 29 30, on right: 25
NUMBER_VAR (47)
    on left: 31, on right: 11 16 42
NUMBER_EXPR (48)
    on left: 32 33 34, on right: 11 13 14 27 28 32 33 40 52
ADD_EXPR (49)
    on left: 35 36 37, on right: 32 33 34 35 36
MULT_EXPR (50)
    on left: 38 39, on right: 35 36 37 38
MOD_EXPR (51)
    on left: 40 41, on right: 38 39
NUMBER_TERM (52)
    on left: 42 43 44, on right: 41
BOOL_EXPR (53)
    on left: 45 46, on right: 18 19 20 45 50 51
OR_EXPR (54)
    on left: 47 48, on right: 45 46 47
AND_EXPR (55)
    on left: 49 50 51, on right: 47 48
BOOL_TERM (56)
    on left: 52 53, on right: 49
BOOL_FUNCTION (57)
    on left: 54 55 56 57 58 59, on right: 52 53


State 0

    0 $accept: . PROGRAM $end

    '{'  shift, and go to state 1

    PROGRAM  go to state 2
    UNIT     go to state 3


State 1

    2 UNIT: '{' . OPERATIONS '}'
    3     | '{' . '}'

    _NUMBER_VAR  shift, and go to state 4
    _STRING_VAR  shift, and go to state 5
    _PRINT       shift, and go to state 6
    _IF          shift, and go to state 7
    _WHILE       shift, and go to state 8
    _READ        shift, and go to state 9
    '}'          shift, and go to state 10

    OPERATIONS  go to state 11
    OPERATION   go to state 12
    ASSIGN      go to state 13
    PRINT       go to state 14
    READ        go to state 15
    IF          go to state 16
    WHILE       go to state 17
    STRING_VAR  go to state 18
    NUMBER_VAR  go to state 19


State 2

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 20


State 3

    1 PROGRAM: UNIT .

    $default  reduce using rule 1 (PROGRAM)


State 4

   31 NUMBER_VAR: _NUMBER_VAR .

    $default  reduce using rule 31 (NUMBER_VAR)


State 5

   21 STRING_VAR: _STRING_VAR .

    $default  reduce using rule 21 (STRING_VAR)


State 6

   14 PRINT: _PRINT . '(' NUMBER_EXPR ')' ';'
   15      | _PRINT . '(' STRING_EXPR ')' ';'

    '('  shift, and go to state 21


State 7

   18 IF: _IF . '(' BOOL_EXPR ')' UNIT
   19   | _IF . '(' BOOL_EXPR ')' UNIT _ELSE UNIT

    '('  shift, and go to state 22


State 8

   20 WHILE: _WHILE . '(' BOOL_EXPR ')' UNIT

    '('  shift, and go to state 23


State 9

   16 READ: _READ . '(' NUMBER_VAR ')' ';'
   17     | _READ . '(' STRING_VAR ')' ';'

    '('  shift, and go to state 24


State 10

    3 UNIT: '{' '}' .

    $default  reduce using rule 3 (UNIT)


State 11

    2 UNIT: '{' OPERATIONS . '}'
    5 OPERATIONS: OPERATIONS . OPERATION

    _NUMBER_VAR  shift, and go to state 4
    _STRING_VAR  shift, and go to state 5
    _PRINT       shift, and go to state 6
    _IF          shift, and go to state 7
    _WHILE       shift, and go to state 8
    _READ        shift, and go to state 9
    '}'          shift, and go to state 25

    OPERATION   go to state 26
    ASSIGN      go to state 13
    PRINT       go to state 14
    READ        go to state 15
    IF          go to state 16
    WHILE       go to state 17
    STRING_VAR  go to state 18
    NUMBER_VAR  go to state 19


State 12

    4 OPERATIONS: OPERATION .

    $default  reduce using rule 4 (OPERATIONS)


State 13

    8 OPERATION: ASSIGN .

    $default  reduce using rule 8 (OPERATION)


State 14

    6 OPERATION: PRINT .

    $default  reduce using rule 6 (OPERATION)


State 15

    7 OPERATION: READ .

    $default  reduce using rule 7 (OPERATION)


State 16

    9 OPERATION: IF .

    $default  reduce using rule 9 (OPERATION)


State 17

   10 OPERATION: WHILE .

    $default  reduce using rule 10 (OPERATION)


State 18

   12 ASSIGN: STRING_VAR . '=' STRING_EXPR ';'
   13       | STRING_VAR . '[' NUMBER_EXPR ']' '=' STRING_EXPR ';'

    '='  shift, and go to state 27
    '['  shift, and go to state 28


State 19

   11 ASSIGN: NUMBER_VAR . '=' NUMBER_EXPR ';'

    '='  shift, and go to state 29


State 20

    0 $accept: PROGRAM $end .

    $default  accept


State 21

   14 PRINT: _PRINT '(' . NUMBER_EXPR ')' ';'
   15      | _PRINT '(' . STRING_EXPR ')' ';'

    _NUMBER      shift, and go to state 30
    _STRING      shift, and go to state 31
    _NUMBER_VAR  shift, and go to state 4
    _STRING_VAR  shift, and go to state 5
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 33

    STRING_VAR   go to state 34
    STRING_EXPR  go to state 35
    CONCAT_EXPR  go to state 36
    SLICE_EXPR   go to state 37
    STRING_TERM  go to state 38
    NUMBER_VAR   go to state 39
    NUMBER_EXPR  go to state 40
    ADD_EXPR     go to state 41
    MULT_EXPR    go to state 42
    MOD_EXPR     go to state 43
    NUMBER_TERM  go to state 44


State 22

   18 IF: _IF '(' . BOOL_EXPR ')' UNIT
   19   | _IF '(' . BOOL_EXPR ')' UNIT _ELSE UNIT

    _NUMBER      shift, and go to state 30
    _STRING      shift, and go to state 31
    _NUMBER_VAR  shift, and go to state 4
    _STRING_VAR  shift, and go to state 5
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 45
    '!'          shift, and go to state 46

    STRING_VAR   go to state 34
    STRING_EXPR  go to state 47
    CONCAT_EXPR  go to state 36
    SLICE_EXPR   go to state 37
    STRING_TERM  go to state 38
    NUMBER_VAR   go to state 39
    NUMBER_EXPR  go to state 48
    ADD_EXPR     go to state 41
    MULT_EXPR    go to state 42
    MOD_EXPR     go to state 43
    NUMBER_TERM  go to state 44
    BOOL_EXPR    go to state 49
    OR_EXPR      go to state 50
    AND_EXPR     go to state 51
    BOOL_TERM    go to state 52


State 23

   20 WHILE: _WHILE '(' . BOOL_EXPR ')' UNIT

    _NUMBER      shift, and go to state 30
    _STRING      shift, and go to state 31
    _NUMBER_VAR  shift, and go to state 4
    _STRING_VAR  shift, and go to state 5
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 45
    '!'          shift, and go to state 46

    STRING_VAR   go to state 34
    STRING_EXPR  go to state 47
    CONCAT_EXPR  go to state 36
    SLICE_EXPR   go to state 37
    STRING_TERM  go to state 38
    NUMBER_VAR   go to state 39
    NUMBER_EXPR  go to state 48
    ADD_EXPR     go to state 41
    MULT_EXPR    go to state 42
    MOD_EXPR     go to state 43
    NUMBER_TERM  go to state 44
    BOOL_EXPR    go to state 53
    OR_EXPR      go to state 50
    AND_EXPR     go to state 51
    BOOL_TERM    go to state 52


State 24

   16 READ: _READ '(' . NUMBER_VAR ')' ';'
   17     | _READ '(' . STRING_VAR ')' ';'

    _NUMBER_VAR  shift, and go to state 4
    _STRING_VAR  shift, and go to state 5

    STRING_VAR  go to state 54
    NUMBER_VAR  go to state 55


State 25

    2 UNIT: '{' OPERATIONS '}' .

    $default  reduce using rule 2 (UNIT)


State 26

    5 OPERATIONS: OPERATIONS OPERATION .

    $default  reduce using rule 5 (OPERATIONS)


State 27

   12 ASSIGN: STRING_VAR '=' . STRING_EXPR ';'

    _STRING      shift, and go to state 31
    _STRING_VAR  shift, and go to state 5
    '('          shift, and go to state 56

    STRING_VAR   go to state 34
    STRING_EXPR  go to state 57
    CONCAT_EXPR  go to state 36
    SLICE_EXPR   go to state 37
    STRING_TERM  go to state 38


State 28

   13 ASSIGN: STRING_VAR '[' . NUMBER_EXPR ']' '=' STRING_EXPR ';'

    _NUMBER      shift, and go to state 30
    _NUMBER_VAR  shift, and go to state 4
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 58

    NUMBER_VAR   go to state 39
    NUMBER_EXPR  go to state 59
    ADD_EXPR     go to state 41
    MULT_EXPR    go to state 42
    MOD_EXPR     go to state 43
    NUMBER_TERM  go to state 44


State 29

   11 ASSIGN: NUMBER_VAR '=' . NUMBER_EXPR ';'

    _NUMBER      shift, and go to state 30
    _NUMBER_VAR  shift, and go to state 4
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 58

    NUMBER_VAR   go to state 39
    NUMBER_EXPR  go to state 60
    ADD_EXPR     go to state 41
    MULT_EXPR    go to state 42
    MOD_EXPR     go to state 43
    NUMBER_TERM  go to state 44


State 30

   43 NUMBER_TERM: _NUMBER .

    $default  reduce using rule 43 (NUMBER_TERM)


State 31

   30 STRING_TERM: _STRING .

    $default  reduce using rule 30 (STRING_TERM)


State 32

   44 NUMBER_TERM: _LEN_FUNC . '(' STRING_EXPR ')'

    '('  shift, and go to state 61


State 33

   24 CONCAT_EXPR: '(' . STRING_EXPR ')'
   40 MOD_EXPR: '(' . NUMBER_EXPR ')'

    _NUMBER      shift, and go to state 30
    _STRING      shift, and go to state 31
    _NUMBER_VAR  shift, and go to state 4
    _STRING_VAR  shift, and go to state 5
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 33

    STRING_VAR   go to state 34
    STRING_EXPR  go to state 62
    CONCAT_EXPR  go to state 36
    SLICE_EXPR   go to state 37
    STRING_TERM  go to state 38
    NUMBER_VAR   go to state 39
    NUMBER_EXPR  go to state 63
    ADD_EXPR     go to state 41
    MULT_EXPR    go to state 42
    MOD_EXPR     go to state 43
    NUMBER_TERM  go to state 44


State 34

   29 STRING_TERM: STRING_VAR .

    $default  reduce using rule 29 (STRING_TERM)


State 35

   15 PRINT: _PRINT '(' STRING_EXPR . ')' ';'
   23 STRING_EXPR: STRING_EXPR . '+' CONCAT_EXPR

    ')'  shift, and go to state 64
    '+'  shift, and go to state 65


State 36

   22 STRING_EXPR: CONCAT_EXPR .
   27 SLICE_EXPR: CONCAT_EXPR . '[' NUMBER_EXPR ':' NUMBER_EXPR ']'
   28           | CONCAT_EXPR . '[' NUMBER_EXPR ']'

    '['  shift, and go to state 66

    $default  reduce using rule 22 (STRING_EXPR)


State 37

   26 CONCAT_EXPR: SLICE_EXPR .

    $default  reduce using rule 26 (CONCAT_EXPR)


State 38

   25 CONCAT_EXPR: STRING_TERM .

    $default  reduce using rule 25 (CONCAT_EXPR)


State 39

   42 NUMBER_TERM: NUMBER_VAR .

    $default  reduce using rule 42 (NUMBER_TERM)


State 40

   14 PRINT: _PRINT '(' NUMBER_EXPR . ')' ';'
   32 NUMBER_EXPR: NUMBER_EXPR . '+' ADD_EXPR
   33            | NUMBER_EXPR . '-' ADD_EXPR

    ')'  shift, and go to state 67
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69


State 41

   34 NUMBER_EXPR: ADD_EXPR .
   35 ADD_EXPR: ADD_EXPR . '*' MULT_EXPR
   36         | ADD_EXPR . '/' MULT_EXPR

    '*'  shift, and go to state 70
    '/'  shift, and go to state 71

    $default  reduce using rule 34 (NUMBER_EXPR)


State 42

   37 ADD_EXPR: MULT_EXPR .
   38 MULT_EXPR: MULT_EXPR . '%' MOD_EXPR

    '%'  shift, and go to state 72

    $default  reduce using rule 37 (ADD_EXPR)


State 43

   39 MULT_EXPR: MOD_EXPR .

    $default  reduce using rule 39 (MULT_EXPR)


State 44

   41 MOD_EXPR: NUMBER_TERM .

    $default  reduce using rule 41 (MOD_EXPR)


State 45

   24 CONCAT_EXPR: '(' . STRING_EXPR ')'
   40 MOD_EXPR: '(' . NUMBER_EXPR ')'
   50 AND_EXPR: '(' . BOOL_EXPR ')'

    _NUMBER      shift, and go to state 30
    _STRING      shift, and go to state 31
    _NUMBER_VAR  shift, and go to state 4
    _STRING_VAR  shift, and go to state 5
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 45
    '!'          shift, and go to state 46

    STRING_VAR   go to state 34
    STRING_EXPR  go to state 73
    CONCAT_EXPR  go to state 36
    SLICE_EXPR   go to state 37
    STRING_TERM  go to state 38
    NUMBER_VAR   go to state 39
    NUMBER_EXPR  go to state 74
    ADD_EXPR     go to state 41
    MULT_EXPR    go to state 42
    MOD_EXPR     go to state 43
    NUMBER_TERM  go to state 44
    BOOL_EXPR    go to state 75
    OR_EXPR      go to state 50
    AND_EXPR     go to state 51
    BOOL_TERM    go to state 52


State 46

   51 AND_EXPR: '!' . '(' BOOL_EXPR ')'

    '('  shift, and go to state 76


State 47

   23 STRING_EXPR: STRING_EXPR . '+' CONCAT_EXPR
   53 BOOL_TERM: STRING_EXPR . BOOL_FUNCTION STRING_EXPR

    '='  shift, and go to state 77
    '+'  shift, and go to state 65
    '!'  shift, and go to state 78
    '<'  shift, and go to state 79
    '>'  shift, and go to state 80

    BOOL_FUNCTION  go to state 81


State 48

   32 NUMBER_EXPR: NUMBER_EXPR . '+' ADD_EXPR
   33            | NUMBER_EXPR . '-' ADD_EXPR
   52 BOOL_TERM: NUMBER_EXPR . BOOL_FUNCTION NUMBER_EXPR

    '='  shift, and go to state 77
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '!'  shift, and go to state 78
    '<'  shift, and go to state 79
    '>'  shift, and go to state 80

    BOOL_FUNCTION  go to state 82


State 49

   18 IF: _IF '(' BOOL_EXPR . ')' UNIT
   19   | _IF '(' BOOL_EXPR . ')' UNIT _ELSE UNIT
   45 BOOL_EXPR: BOOL_EXPR . '|' '|' OR_EXPR

    ')'  shift, and go to state 83
    '|'  shift, and go to state 84


State 50

   46 BOOL_EXPR: OR_EXPR .
   47 OR_EXPR: OR_EXPR . '&' '&' AND_EXPR

    '&'  shift, and go to state 85

    $default  reduce using rule 46 (BOOL_EXPR)


State 51

   48 OR_EXPR: AND_EXPR .

    $default  reduce using rule 48 (OR_EXPR)


State 52

   49 AND_EXPR: BOOL_TERM .

    $default  reduce using rule 49 (AND_EXPR)


State 53

   20 WHILE: _WHILE '(' BOOL_EXPR . ')' UNIT
   45 BOOL_EXPR: BOOL_EXPR . '|' '|' OR_EXPR

    ')'  shift, and go to state 86
    '|'  shift, and go to state 84


State 54

   17 READ: _READ '(' STRING_VAR . ')' ';'

    ')'  shift, and go to state 87


State 55

   16 READ: _READ '(' NUMBER_VAR . ')' ';'

    ')'  shift, and go to state 88


State 56

   24 CONCAT_EXPR: '(' . STRING_EXPR ')'

    _STRING      shift, and go to state 31
    _STRING_VAR  shift, and go to state 5
    '('          shift, and go to state 56

    STRING_VAR   go to state 34
    STRING_EXPR  go to state 62
    CONCAT_EXPR  go to state 36
    SLICE_EXPR   go to state 37
    STRING_TERM  go to state 38


State 57

   12 ASSIGN: STRING_VAR '=' STRING_EXPR . ';'
   23 STRING_EXPR: STRING_EXPR . '+' CONCAT_EXPR

    ';'  shift, and go to state 89
    '+'  shift, and go to state 65


State 58

   40 MOD_EXPR: '(' . NUMBER_EXPR ')'

    _NUMBER      shift, and go to state 30
    _NUMBER_VAR  shift, and go to state 4
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 58

    NUMBER_VAR   go to state 39
    NUMBER_EXPR  go to state 63
    ADD_EXPR     go to state 41
    MULT_EXPR    go to state 42
    MOD_EXPR     go to state 43
    NUMBER_TERM  go to state 44


State 59

   13 ASSIGN: STRING_VAR '[' NUMBER_EXPR . ']' '=' STRING_EXPR ';'
   32 NUMBER_EXPR: NUMBER_EXPR . '+' ADD_EXPR
   33            | NUMBER_EXPR . '-' ADD_EXPR

    ']'  shift, and go to state 90
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69


State 60

   11 ASSIGN: NUMBER_VAR '=' NUMBER_EXPR . ';'
   32 NUMBER_EXPR: NUMBER_EXPR . '+' ADD_EXPR
   33            | NUMBER_EXPR . '-' ADD_EXPR

    ';'  shift, and go to state 91
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69


State 61

   44 NUMBER_TERM: _LEN_FUNC '(' . STRING_EXPR ')'

    _STRING      shift, and go to state 31
    _STRING_VAR  shift, and go to state 5
    '('          shift, and go to state 56

    STRING_VAR   go to state 34
    STRING_EXPR  go to state 92
    CONCAT_EXPR  go to state 36
    SLICE_EXPR   go to state 37
    STRING_TERM  go to state 38


State 62

   23 STRING_EXPR: STRING_EXPR . '+' CONCAT_EXPR
   24 CONCAT_EXPR: '(' STRING_EXPR . ')'

    ')'  shift, and go to state 93
    '+'  shift, and go to state 65


State 63

   32 NUMBER_EXPR: NUMBER_EXPR . '+' ADD_EXPR
   33            | NUMBER_EXPR . '-' ADD_EXPR
   40 MOD_EXPR: '(' NUMBER_EXPR . ')'

    ')'  shift, and go to state 94
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69


State 64

   15 PRINT: _PRINT '(' STRING_EXPR ')' . ';'

    ';'  shift, and go to state 95


State 65

   23 STRING_EXPR: STRING_EXPR '+' . CONCAT_EXPR

    _STRING      shift, and go to state 31
    _STRING_VAR  shift, and go to state 5
    '('          shift, and go to state 56

    STRING_VAR   go to state 34
    CONCAT_EXPR  go to state 96
    SLICE_EXPR   go to state 37
    STRING_TERM  go to state 38


State 66

   27 SLICE_EXPR: CONCAT_EXPR '[' . NUMBER_EXPR ':' NUMBER_EXPR ']'
   28           | CONCAT_EXPR '[' . NUMBER_EXPR ']'

    _NUMBER      shift, and go to state 30
    _NUMBER_VAR  shift, and go to state 4
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 58

    NUMBER_VAR   go to state 39
    NUMBER_EXPR  go to state 97
    ADD_EXPR     go to state 41
    MULT_EXPR    go to state 42
    MOD_EXPR     go to state 43
    NUMBER_TERM  go to state 44


State 67

   14 PRINT: _PRINT '(' NUMBER_EXPR ')' . ';'

    ';'  shift, and go to state 98


State 68

   32 NUMBER_EXPR: NUMBER_EXPR '+' . ADD_EXPR

    _NUMBER      shift, and go to state 30
    _NUMBER_VAR  shift, and go to state 4
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 58

    NUMBER_VAR   go to state 39
    ADD_EXPR     go to state 99
    MULT_EXPR    go to state 42
    MOD_EXPR     go to state 43
    NUMBER_TERM  go to state 44


State 69

   33 NUMBER_EXPR: NUMBER_EXPR '-' . ADD_EXPR

    _NUMBER      shift, and go to state 30
    _NUMBER_VAR  shift, and go to state 4
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 58

    NUMBER_VAR   go to state 39
    ADD_EXPR     go to state 100
    MULT_EXPR    go to state 42
    MOD_EXPR     go to state 43
    NUMBER_TERM  go to state 44


State 70

   35 ADD_EXPR: ADD_EXPR '*' . MULT_EXPR

    _NUMBER      shift, and go to state 30
    _NUMBER_VAR  shift, and go to state 4
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 58

    NUMBER_VAR   go to state 39
    MULT_EXPR    go to state 101
    MOD_EXPR     go to state 43
    NUMBER_TERM  go to state 44


State 71

   36 ADD_EXPR: ADD_EXPR '/' . MULT_EXPR

    _NUMBER      shift, and go to state 30
    _NUMBER_VAR  shift, and go to state 4
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 58

    NUMBER_VAR   go to state 39
    MULT_EXPR    go to state 102
    MOD_EXPR     go to state 43
    NUMBER_TERM  go to state 44


State 72

   38 MULT_EXPR: MULT_EXPR '%' . MOD_EXPR

    _NUMBER      shift, and go to state 30
    _NUMBER_VAR  shift, and go to state 4
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 58

    NUMBER_VAR   go to state 39
    MOD_EXPR     go to state 103
    NUMBER_TERM  go to state 44


State 73

   23 STRING_EXPR: STRING_EXPR . '+' CONCAT_EXPR
   24 CONCAT_EXPR: '(' STRING_EXPR . ')'
   53 BOOL_TERM: STRING_EXPR . BOOL_FUNCTION STRING_EXPR

    '='  shift, and go to state 77
    ')'  shift, and go to state 93
    '+'  shift, and go to state 65
    '!'  shift, and go to state 78
    '<'  shift, and go to state 79
    '>'  shift, and go to state 80

    BOOL_FUNCTION  go to state 81


State 74

   32 NUMBER_EXPR: NUMBER_EXPR . '+' ADD_EXPR
   33            | NUMBER_EXPR . '-' ADD_EXPR
   40 MOD_EXPR: '(' NUMBER_EXPR . ')'
   52 BOOL_TERM: NUMBER_EXPR . BOOL_FUNCTION NUMBER_EXPR

    '='  shift, and go to state 77
    ')'  shift, and go to state 94
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '!'  shift, and go to state 78
    '<'  shift, and go to state 79
    '>'  shift, and go to state 80

    BOOL_FUNCTION  go to state 82


State 75

   45 BOOL_EXPR: BOOL_EXPR . '|' '|' OR_EXPR
   50 AND_EXPR: '(' BOOL_EXPR . ')'

    ')'  shift, and go to state 104
    '|'  shift, and go to state 84


State 76

   51 AND_EXPR: '!' '(' . BOOL_EXPR ')'

    _NUMBER      shift, and go to state 30
    _STRING      shift, and go to state 31
    _NUMBER_VAR  shift, and go to state 4
    _STRING_VAR  shift, and go to state 5
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 45
    '!'          shift, and go to state 46

    STRING_VAR   go to state 34
    STRING_EXPR  go to state 47
    CONCAT_EXPR  go to state 36
    SLICE_EXPR   go to state 37
    STRING_TERM  go to state 38
    NUMBER_VAR   go to state 39
    NUMBER_EXPR  go to state 48
    ADD_EXPR     go to state 41
    MULT_EXPR    go to state 42
    MOD_EXPR     go to state 43
    NUMBER_TERM  go to state 44
    BOOL_EXPR    go to state 105
    OR_EXPR      go to state 50
    AND_EXPR     go to state 51
    BOOL_TERM    go to state 52


State 77

   54 BOOL_FUNCTION: '=' . '='

    '='  shift, and go to state 106


State 78

   55 BOOL_FUNCTION: '!' . '='

    '='  shift, and go to state 107


State 79

   56 BOOL_FUNCTION: '<' . '='
   58              | '<' .

    '='  shift, and go to state 108

    $default  reduce using rule 58 (BOOL_FUNCTION)


State 80

   57 BOOL_FUNCTION: '>' . '='
   59              | '>' .

    '='  shift, and go to state 109

    $default  reduce using rule 59 (BOOL_FUNCTION)


State 81

   53 BOOL_TERM: STRING_EXPR BOOL_FUNCTION . STRING_EXPR

    _STRING      shift, and go to state 31
    _STRING_VAR  shift, and go to state 5
    '('          shift, and go to state 56

    STRING_VAR   go to state 34
    STRING_EXPR  go to state 110
    CONCAT_EXPR  go to state 36
    SLICE_EXPR   go to state 37
    STRING_TERM  go to state 38


State 82

   52 BOOL_TERM: NUMBER_EXPR BOOL_FUNCTION . NUMBER_EXPR

    _NUMBER      shift, and go to state 30
    _NUMBER_VAR  shift, and go to state 4
    _LEN_FUNC    shift, and go to state 32
    '('          shift, and go to state 58

    NUMBER_VAR   go to state 39
    NUMBER_EXPR  go to state 111
    ADD_EXPR     go to state 41
    MULT_EXPR    go to state 42
    MOD_EXPR     go to state 43
    NUMBER_TERM  go to state 44


State 83

   18 IF: _IF '(' BOOL_EXPR ')' . UNIT
   19   | _IF '(' BOOL_EXPR ')' . UNIT _ELSE UNIT

    '{'  shift, and go to state 1

    UNIT  go to state 112


State 84

   45 BOOL_EXPR: BOOL_EXPR '|' . '|' OR_EXPR

    '|'  shift, and go to state 113


State 85

   47 OR_EXPR: OR_EXPR '&' . '&' AND_EXPR

    '&'  shift, and go to state 114


State 86

   20 WHILE: _WHILE '(' BOOL_EXPR ')' . UNIT

    '{'  shift, and go to state 1

    UNIT  go to state 115


State 87

   17 READ: _READ '(' STRING_VAR ')' . ';'

    ';'  shift, and go to state 116


State 88

   16 READ: _READ '(' NUMBER_VAR ')' . ';'

    ';'  shift, and go to state 117


State 89

   12 ASSIGN: STRING_VAR '=' STRING_EXPR ';' .

    $default  reduce using rule 12 (ASSIGN)


State 90

   13 ASSIGN: STRING_VAR '[' NUMBER_EXPR ']' . '=' STRING_EXPR ';'

    '='  shift, and go to state 118


State 91

   11 ASSIGN: NUMBER_VAR '=' NUMBER_EXPR ';' .

    $default  reduce using rule 11 (ASSIGN)


State 92

   23 STRING_EXPR: STRING_EXPR . '+' CONCAT_EXPR
   44 NUMBER_TERM: _LEN_FUNC '(' STRING_EXPR . ')'

    ')'  shift, and go to state 119
    '+'  shift, and go to state 65


State 93

   24 CONCAT_EXPR: '(' STRING_EXPR ')' .

    $default  reduce using rule 24 (CONCAT_EXPR)


State 94

   40 MOD_EXPR: '(' NUMBER_EXPR ')' .

    $default  reduce using rule 40 (MOD_EXPR)


State 95

   15 PRINT: _PRINT '(' STRING_EXPR ')' ';' .

    $default  reduce using rule 15 (PRINT)


State 96

   23 STRING_EXPR: STRING_EXPR '+' CONCAT_EXPR .
   27 SLICE_EXPR: CONCAT_EXPR . '[' NUMBER_EXPR ':' NUMBER_EXPR ']'
   28           | CONCAT_EXPR . '[' NUMBER_EXPR ']'

    '['  shift, and go to state 66

    $default  reduce using rule 23 (STRING_EXPR)


State 97

   27 SLICE_EXPR: CONCAT_EXPR '[' NUMBER_EXPR . ':' NUMBER_EXPR ']'
   28           | CONCAT_EXPR '[' NUMBER_EXPR . ']'
   32 NUMBER_EXPR: NUMBER_EXPR . '+' ADD_EXPR
   33            | NUMBER_EXPR . '-' ADD_EXPR

    ']'  shift, and go to state 120
    '+'  shift, and go to state 68
    ':'  shift, and go to state 121
    '-'  shift, and go to state 69


State 98

   14 PRINT: _PRINT '(' NUMBER_EXPR ')' ';' .

    $default  reduce using rule 14 (PRINT)


State 99
